// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryBuilderRelationshipAutocompleteSearch QueryRowRelationshipAutocompleteSearch Component should render autocomplete field for equals operator: Expect autocomplete field to be displayed for equals operator 1`] = `
<div>
  <div>
    <form
      action="#"
    >
      <div
        class="error-viewer"
      />
      <div
        class="row"
      >
        <div
          class="col me-1 ms-2 ps-0 css-b62m3t-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-2-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
            role="log"
          />
          <div
            class="css-13cymwt-control"
          >
            <div
              class="css-hlgwow"
            >
              <div
                class="css-1jqq78o-placeholder"
                id="react-select-2-placeholder"
              >
                Search for a record...
              </div>
              <div
                class="css-19bb58m"
                data-value=""
              >
                <input
                  aria-activedescendant=""
                  aria-autocomplete="list"
                  aria-describedby="react-select-2-placeholder"
                  aria-expanded="false"
                  aria-haspopup="true"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  class=""
                  id="react-select-2-input"
                  role="combobox"
                  spellcheck="false"
                  style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="css-1wy0on6"
            >
              <span
                class="css-1u9des2-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="css-1xc3v61-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-tj5bde-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`QueryBuilderRelationshipAutocompleteSearch transformRelationshipAutocompleteToDSL function Edge cases If fieldInfo is undefined, nothing should be generated 1`] = `undefined`;

exports[`QueryBuilderRelationshipAutocompleteSearch transformRelationshipAutocompleteToDSL function Edge cases If no elasticSearchRelationshipPath is provided, nothing should be generated 1`] = `undefined`;

exports[`QueryBuilderRelationshipAutocompleteSearch transformRelationshipAutocompleteToDSL function Edge cases If relationshipAutocompleteConfig is undefined, nothing should be generated 1`] = `undefined`;

exports[`QueryBuilderRelationshipAutocompleteSearch transformRelationshipAutocompleteToDSL function Edge cases If selectedResourceUUID is empty, nothing should be generated 1`] = `undefined`;

exports[`QueryBuilderRelationshipAutocompleteSearch transformRelationshipAutocompleteToDSL function Edge cases If value is empty string, nothing should be generated 1`] = `undefined`;

exports[`QueryBuilderRelationshipAutocompleteSearch transformRelationshipAutocompleteToDSL function Edge cases If value is invalid JSON, nothing should be generated 1`] = `undefined`;

exports[`QueryBuilderRelationshipAutocompleteSearch transformRelationshipAutocompleteToDSL function Edge cases If value is not a string, nothing should be generated 1`] = `undefined`;

exports[`QueryBuilderRelationshipAutocompleteSearch transformRelationshipAutocompleteToDSL function Empty operation With direct path (not included) 1`] = `
Object {
  "bool": Object {
    "must_not": Object {
      "exists": Object {
        "field": "data.relationships.collectors.data.id",
      },
    },
  },
}
`;

exports[`QueryBuilderRelationshipAutocompleteSearch transformRelationshipAutocompleteToDSL function Empty operation With relationship as field (included path) 1`] = `
Object {
  "bool": Object {
    "must_not": Object {
      "nested": Object {
        "path": "included",
        "query": Object {
          "bool": Object {
            "must": Array [
              Object {
                "exists": Object {
                  "field": "included.relationships.collectors.data.id",
                },
              },
              Object {
                "term": Object {
                  "included.type": "collecting-event",
                },
              },
            ],
          },
        },
      },
    },
  },
}
`;

exports[`QueryBuilderRelationshipAutocompleteSearch transformRelationshipAutocompleteToDSL function Equals operation With direct path (not included) 1`] = `
Object {
  "term": Object {
    "data.relationships.collectors.data.id": "person-1",
  },
}
`;

exports[`QueryBuilderRelationshipAutocompleteSearch transformRelationshipAutocompleteToDSL function Equals operation With relationship as field (included path) 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "term": Object {
              "included.relationships.collectors.data.id": "person-1",
            },
          },
          Object {
            "term": Object {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderRelationshipAutocompleteSearch transformRelationshipAutocompleteToDSL function Not Empty operation With direct path (not included) 1`] = `
Object {
  "exists": Object {
    "field": "data.relationships.collectors.data.id",
  },
}
`;

exports[`QueryBuilderRelationshipAutocompleteSearch transformRelationshipAutocompleteToDSL function Not Empty operation With relationship as field (included path) 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "exists": Object {
              "field": "included.relationships.collectors.data.id",
            },
          },
          Object {
            "term": Object {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderRelationshipAutocompleteSearch transformRelationshipAutocompleteToDSL function Not Equals operation With direct path (not included) 1`] = `
Object {
  "bool": Object {
    "must_not": Object {
      "term": Object {
        "data.relationships.collectors.data.id": "person-1",
      },
    },
  },
}
`;

exports[`QueryBuilderRelationshipAutocompleteSearch transformRelationshipAutocompleteToDSL function Not Equals operation With relationship as field (included path) 1`] = `
Object {
  "bool": Object {
    "must_not": Object {
      "nested": Object {
        "path": "included",
        "query": Object {
          "bool": Object {
            "must": Array [
              Object {
                "term": Object {
                  "included.relationships.collectors.data.id": "person-1",
                },
              },
              Object {
                "term": Object {
                  "included.type": "collecting-event",
                },
              },
            ],
          },
        },
      },
    },
  },
}
`;
